첫번째 프로그램 만들어보기